fix: large non-fullscreen logo previews overflow mobile screen width

--- a/src/components/InfoBlock/info-block.module.scss
+++ b/src/components/InfoBlock/info-block.module.scss
@@ -40,16 +40,23 @@
 	}
 }
 
-@media (max-width: 950px) {
-	.preview.fullscreen:after {
-		box-shadow: inset 0 -80px 40px -20px var(--bg-white);
-	}
-}
-
 .image img {
 	display: block;
 	margin: 0 auto;
 	width: 100%;
+}
+
+@media (max-width: 950px) {
+	.preview {
+		&:not(.fullscreen) .image img {
+			width: unset;
+			max-width: 80%;
+		}
+
+		&.fullscreen:after {
+			box-shadow: inset 0 -80px 40px -20px var(--bg-white);
+		}
+	}
 }
 
 .info {
